--- a/frontend/templates/contact.html
+++ b/frontend/templates/contact.html
@@ -22,19 +22,19 @@
             <form action="" method="POST" id="form" novalidate> <!--method post pour éviter l'affichage des données sensibles dans l'url-->
             
                 <label for="lastname">Nom</label>
-                <input type="text" id="lastname" name="lastname" placeholder="Votre nom">
+                <input type="text" id="lastname" name="lastname" placeholder="Votre nom" maxlength="50">
                 <div id="lastname_error" class="error-message"></div>
 
                 <label for="firstname">Prénom</label>
-                <input type="text" id="firstname" name="firstname" placeholder="Votre prénom">
+                <input type="text" id="firstname" name="firstname" placeholder="Votre prénom" maxlength="50">
                 <div id="firstname_error" class="error-message"></div>
 
                 <label for="email">Email</label>
-                <input type="email" id="email" name="email" placeholder="exemple@gmail.fr">
+                <input type="email" id="email" name="email" placeholder="exemple@gmail.fr" maxlength="150">
                 <div id="email_error" class="error-message"></div>
 
                 <label for="message">Message :</label>
-                <textarea id="message" name="message" placeholder="Écrivez ici (max 255 caractères)"></textarea>
+                <textarea id="message" name="message" placeholder="Écrivez ici (max 255 caractères)" maxlength="255"></textarea>
                 <div id="char_count">0/255</div>
                 <div id="message_error" class="error-message"></div>
                 
