--- a/frontend/templates/connexion.html
+++ b/frontend/templates/connexion.html
@@ -35,11 +35,11 @@
                 <h3 class="sr-only">Formulaire de connexion</h3>
             
                 <label for="email">Email</label>
-                <input type="email" id="email" name="email" placeholder="exemple@gmail.fr">
+                <input type="email" id="email" name="email" placeholder="exemple@gmail.fr" maxlength="150">
                 <div id = "email_error" class="error-message"></div>
 
                 <label for="password">Mot de passe</label>
-                <input type="password" id="password" name="password" placeholder="Min 8 caractères">
+                <input type="password" id="password" name="password" placeholder="Min 8 caractères" >
                 <div id = "password_error" class="error-message"></div>
 
                 <button type="submit" id="btn_connexion">Se connecter</button>
