--- a/frontend/templates/inscription.html
+++ b/frontend/templates/inscription.html
@@ -34,15 +34,15 @@
                 <h3 class="sr-only">Formulaire d'inscription</h3>
             
                 <label for="email">Email</label>
-                <input type="email" id="email" name="email" placeholder="exemple@gmail.fr" autocomplete="email">
+                <input type="email" id="email" name="email" placeholder="exemple@gmail.fr" maxlength="150">
                 <div id = "email_error" class="error-message"></div>
 
                 <label for="password">Mot de passe</label>
-                <input type="password" id="password" name="password" placeholder="Min 8 caractères" autocomplete="password">
+                <input type="password" id="password" name="password" placeholder="Min 8 caractères" maxlength="20">
                 <div id = "password_error" class="error-message"></div>
 
                 <label for="confirm_password">Confirmer le mot de passe</label>
-                <input type="password" id="confirm_password" name="confirm_password" autocomplete="confirm_password">
+                <input type="password" id="confirm_password" name="confirm_password" maxlength="20">
                 <div id = "confirm_password_error" class="error-message"></div>
 
                 <label for="cgu">
