--- a/frontend/assets/css/connexion_inscription.css
+++ b/frontend/assets/css/connexion_inscription.css
@@ -2,3 +2,21 @@
   color: gray;
   cursor: pointer;
 }
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
+.icon {
+    height: 40px;
+    padding: 10px;
+    border-radius: 40%;
+    border-style: solid;
+    border-color: black;
+}
