--- a/frontend/templates/contact.html
+++ b/frontend/templates/contact.html
@@ -21,7 +21,7 @@
             <button type="button" aria-label="Prévoir un appel">Prévoir un appel</button>
     </div>
         <div class="formContact">
-            <form action="" method="POST" id="form" novalidate> <!--method post pour éviter l'affichage des données sensibles dans l'url-->
+            <form action="" method="POST" id="formcontact" novalidate> <!--method post pour éviter l'affichage des données sensibles dans l'url-->
             
                 <label for="lastname">Nom</label>
                 <input type="text" id="lastname" name="lastname" placeholder="Votre nom" maxlength="50" aria-describedby="lastname_error" autocomplete="name">
@@ -53,7 +53,7 @@
     <footer id="footer"></footer>
 </main>
 <script src="../assets/js/toast.js"></script>
-<script src="../assets/js/contact.js"></script>
+<script src="../assets/js/formulaire.js"></script>
 <script src="../assets/js/header.js"></script>
 </body>
 </html>
