--- a/frontend/templates/connexion.html
+++ b/frontend/templates/connexion.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Se connecter</title>
+    <meta name="description" content="Connectez vous pour accéder à votre espace">
+    <title>Se connecter à Miam & Co</title>
     <link rel="icon" href="../assets/img/poele.ico" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../assets/css/error.css">
@@ -15,18 +16,15 @@
     <section class="gauche_insc">
         <h1>Se connecter ⤵</h1>
         <nav aria-label="Se connecter avec un réseau social">
-            <a href="https://www.facebook.com/?locale=fr_FR" title="Se connecter avec Facebook" rel="noopener noreferrer" target="_blank">
+            <a href="https://www.facebook.com/?locale=fr_FR" title="Se connecter avec Facebook" rel="noopener noreferrer" target="_blank" aria-label="Se connecter avec Facebook">
                 <img src="../assets/img/facebook.webp" class="icon" alt="Logo Facebook"> 
-                <span class="sr-only">Se connecter avec Facebook</span>
             </a>
-            <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fwww.google.com%2Fsearch%3Fclient%3Dfirefox-b-d%26q%3Dgooglr%26sei%3D4hJJacLqA7ylkdUPvrm7oAM&dsh=S923499906%3A1766396645593027&ec=futura_srp_og_si_72236_p&flowEntry=ServiceLogin&flowName=GlifWebSignIn&hl=fr&ifkv=Ac2yZaW3KqvlBnBTKCAyrZfElBKYimHjfzwkfKCacHkPeoWENUJgTC4PYWZh40M_Gvz8iCYsASPj8g" 
-            title="Se connecter avec Google" rel="noopener noreferrer" target="_blank">
+            <a href="https://accounts.google.com" 
+            title="Se connecter avec Google" rel="noopener noreferrer" target="_blank" aria-label="Se connecter avec Google">
                 <img src="../assets/img/google.webp" class="icon" alt="Logo de Google"> 
-                <span class="sr-only">Se connecter avec Google</span>
             </a>
             <a href="https://www.linkedin.com/home" title="Se connecter avec Linkedin" rel="noopener noreferrer" target="_blank">
-                <img src="../assets/img/linkedin.webp" class="icon" alt="Logo Linkedin"> 
-                <span class="sr-only">Se connecter avec Linkedin</span>
+                <img src="../assets/img/linkedin.webp" class="icon" alt="Logo Linkedin" aria-label="Se connecter avec Linkedin"> 
             </a>
         </nav>
         <h2>Ou utilise ton adresse email</h2>
@@ -35,22 +33,22 @@
                 <h3 class="sr-only">Formulaire de connexion</h3>
             
                 <label for="email">Email</label>
-                <input type="email" id="email" name="email" placeholder="exemple@gmail.fr" maxlength="150">
-                <div id = "email_error" class="error-message"></div>
+                <input type="email" id="email" name="email" placeholder="exemple@gmail.fr" maxlength="150" aria-describedby="email_error" autocomplete="email">
+                <div id = "email_error" class="error-message" role="alert"></div>
 
                 <label for="password">Mot de passe</label>
-                <input type="password" id="password" name="password" placeholder="Min 8 caractères" >
-                <div id = "password_error" class="error-message"></div>
+                <input type="password" id="password" name="password" placeholder="Min 8 caractères" aria-describedby="password_error" maxlength="20" autocomplete="current-password">
+                <div id = "password_error" class="error-message" role="alert"></div>
 
                 <button type="submit" id="btn_connexion">Se connecter</button>
                 
-                <span class="faux-lien" aria-disabled="true" role="link">Mot de passe oublié ?</span>
+                <button class="faux-lien" type="button" disabled>Mot de passe oublié ?</button>
             </form>
         </div>
     </section>
     <section class="droite_insc" aria-label="Image d'une dame qui cuisine">
         <div>
-            <img src="../assets/img/cuisiniere.webp" alt="Dame qui cuisine" height="500px">
+            <img src="../assets/img/cuisiniere.webp" alt="Dame qui cuisine" loading="lazy">
             <p>
                 Vous êtes nouveau ?
                 <a href="inscription.html" aria-label="Aller à la page d'inscription">S'inscrire</a>
@@ -59,6 +57,6 @@
     </section>
 </main>
 <script src="../assets/js/toast.js"></script>
-<script src="../assets/js/connexion_inscription.js"></script>
+<script src="../assets/js/formulaire.js"></script>
 </body>
 </html>
