--- a/frontend/templates/inscription.html
+++ b/frontend/templates/inscription.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Créez votre compte pour ajouter des recettes. Inscription rapide et sécurisée">
-    <title>S'inscrire</title>
+    <title>S'inscrire sur Miam & Co</title>
     <link rel="icon" href="../assets/img/poele.ico" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../assets/css/connexion_inscription.css">
@@ -19,7 +19,7 @@
             <a href="https://www.facebook.com/?locale=fr_FR" title="S'inscrire avec Facebook" rel="noopener noreferrer" target="_blank" aria-label="S'inscrire avec Facebook">
                 <img src="../assets/img/facebook.webp" class="icon" alt="Logo Facebook"> 
             </a>
-            <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fwww.google.com%2Fsearch%3Fclient%3Dfirefox-b-d%26q%3Dgooglr%26sei%3D4hJJacLqA7ylkdUPvrm7oAM&dsh=S923499906%3A1766396645593027&ec=futura_srp_og_si_72236_p&flowEntry=ServiceLogin&flowName=GlifWebSignIn&hl=fr&ifkv=Ac2yZaW3KqvlBnBTKCAyrZfElBKYimHjfzwkfKCacHkPeoWENUJgTC4PYWZh40M_Gvz8iCYsASPj8g" 
+            <a href="https://accounts.google.com" 
             title="S'inscrire avec Google" rel="noopener noreferrer" target="_blank" aria-label="S'inscrire avec Google">
                 <img src="../assets/img/google.webp" class="icon" alt="Logo de Google"> 
             </a>
@@ -29,7 +29,7 @@
         </nav>
         <h2>Ou utilise ton adresse email</h2>
         <div class="formInsc">
-            <form action="" method="POST" id = "form" novalidate> 
+            <form action="" method="POST" id = "forminscription" novalidate> 
                 <h3 class="sr-only">Formulaire d'inscription</h3>
             
                 <label for="email">Email</label>
@@ -57,7 +57,7 @@
     </section>
     <section class="droite_insc" aria-label="Image d'une dame qui cuisine">
         <div>
-            <img src="../assets/img/cuisiniere.webp" alt="Dame qui cuisine" height="500px" loading="lazy">
+            <img src="../assets/img/cuisiniere.webp" alt="Dame qui cuisine" loading="lazy">
             <p>
                 Déjà un compte ?
                 <a href="connexion.html" aria-label="Aller à la page de connexion">Se connecter</a>
@@ -66,6 +66,6 @@
     </section>
 </main>
 <script src="../assets/js/toast.js"></script>
-<script src="../assets/js/connexion_inscription.js"></script>
+<script src="../assets/js/formulaire.js"></script>
 </body>
 </html>
