--- a/frontend/assets/css/error.css
+++ b/frontend/assets/css/error.css
@@ -14,7 +14,7 @@
     background: #fff5f5;
 }
 /* Label CGU en erreur */
-.cgu-error {
+.cgu-error, .rgpd-error {
     outline: 2px solid #e57373;
     outline-offset: 2px;
 }
