--- a/frontend/templates/contact.html
+++ b/frontend/templates/contact.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Entrez en contact avec nous si vous avez des questions">
     <link rel="stylesheet" href="../assets/css/reset_modern_normalize.css">
     <link rel="stylesheet" href="../assets/css/error.css">
+    <link rel="stylesheet" href="../assets/css/contact.css">
     <title>Contact</title>
 </head>
 <body>
@@ -18,7 +19,7 @@
             Nous nous engageons à vous répondre dans les plus brefs délais et à vous apporter toute l’aide nécessaire. 
             Remplissez le formulaire ci-contre en indiquant vos coordonnées et votre message, et nous prendrons contact avec vous rapidement. 
             Votre satisfaction est notre priorité !</p>
-            <button type="button" aria-label="Prévoir un appel">Prévoir un appel</button>
+            <button type="button" aria-label="Prévoir un appel" class="faux-lien" disabled>Prévoir un appel</button>
     </div>
         <div class="formContact">
             <form action="" method="POST" id="formcontact" novalidate> <!--method post pour éviter l'affichage des données sensibles dans l'url-->
