--- a/frontend/templates/inscription.html
+++ b/frontend/templates/inscription.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Créez votre compte pour ajouter des recettes. Inscription rapide et sécurisée">
     <title>S'inscrire sur Miam & Co</title>
     <link rel="icon" href="../assets/img/poele.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../assets/css/reset_modern_normalize.css">
     <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../assets/css/connexion_inscription.css">
     <link rel="stylesheet" href="../assets/css/error.css">
@@ -50,7 +51,7 @@
                 </label>
                 <div id = "cgu_error" class="error-message" role="alert"></div>
                 
-                <button type="submit" id="btn_inscription">S'inscrire</button>
+                <button type="submit" id="btn_inscription" class="faux-button" disabled>S'inscrire</button>
                 
             </form>
         </div>
