--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -3,3 +3,15 @@ button.active {
     color: white;
     border: 1px solid #ff9800;
 }
+.faux-bouton {
+  color: gray;
+  cursor: pointer;
+  background: transparent;
+  border-radius: 20px;
+  padding: 10px;
+  border-style: double;
+}
+.faux-bouton:hover {
+  color: black;
+  background-color: orange;
+}
