--- a/frontend/templates/connexion.html
+++ b/frontend/templates/connexion.html
@@ -41,7 +41,7 @@
                 <input type="password" id="password" name="password" placeholder="Min 8 caractères" aria-describedby="password_error" maxlength="20" autocomplete="current-password">
                 <div id = "password_error" class="error-message" role="alert"></div>
 
-                <button type="submit" id="btn_connexion" class="faux-button" disabled>Se connecter</button>
+                <button type="submit" id="btn_connexion" class="faux-button">Se connecter</button>
                 
                 <button class="faux-lien" type="button" disabled>Mot de passe oublié ?</button>
             </form>
