--- a/frontend/templates/inscription.html
+++ b/frontend/templates/inscription.html
@@ -51,7 +51,7 @@
                 </label>
                 <div id = "cgu_error" class="error-message" role="alert"></div>
                 
-                <button type="submit" id="btn_inscription" class="faux-button" disabled>S'inscrire</button>
+                <button type="submit" id="btn_inscription" class="faux-button">S'inscrire</button>
                 
             </form>
         </div>
