--- a/frontend/templates/recettes_details.html
+++ b/frontend/templates/recettes_details.html
@@ -28,7 +28,7 @@
 
             <label for="commentaire_input">Votre commentaire :</label>
             <textarea id="commentaire_input" placeholder="Ecrivez votre commentaire" maxlength="500"></textarea>
-            <p id="char_count" class="char_count">0/500</p>
+            <p id="char_count" class="char_count" role="status">0/500</p>
 
             <label for="note_input">Note :</label>
             <select id="note_input" aria-required="true">
@@ -46,8 +46,9 @@
 
         <div id="connexion">
             <label for="prenom" class="sr-only">Votre prénom</label>
-            <input type="text" id="prenom" placeholder="Entrez votre prénom" aria-required="true" aria-autocomplete="none" required>
+            <input type="text" id="prenom" placeholder="Entrez votre prénom" aria-required="true" autocomplete="given-name" required>
             <span class="error" id="prenom_error" aria-live="assertive"></span>
+            
             <button type="button" onclick="connexion()">Se connecter</button>
         </div>
             <button type="button" id="btn_deconnexion" style="display: none;" onclick="deconnexion()">Déconnexion</button>
