--- a/frontend/templates/recettes_details.html
+++ b/frontend/templates/recettes_details.html
@@ -39,7 +39,7 @@
                 <option value="4">★★★★☆</option>
                 <option value="5">★★★★★</option>
             </select>
-            <div class="error" id="note_error" aria-live="assertive" role="alert"></div> <!--interruption immédiate-->
+            <div class="error" id="note_input_error" aria-live="assertive" role="alert"></div> <!--interruption immédiate-->
             
             <button type="submit">Envoyer</button>
         </form>
