Ajout type bouton + h1 + logo et titre

--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -8,10 +8,16 @@
 </head>
 <body>
     <header class="header">
+        <div class="logo_titre">
+            <a href="../index.html">
+                <img src="../assets/img/poele.ico" alt="Logo Miam & Co" class="logo">
+            </a>
+            <p class="titre_h1">Miam & Co</p>
+        </div>
         <nav aria-label="Navigation principale">
             <a href="../index.html">Accueil</a>
             <a href="contact.html">Contact</a>
-            <button id="btn_loupe" aria-label="Rechercher une recette">
+            <button id="btn_loupe" type="button" aria-label="Rechercher une recette">
                 <img src="../assets/img/loupe.svg" alt="Logo d'une loupe pour la recherche" height="30px">
             </button>
             <a href="connexion.html">Se connecter</a>
