--- a/frontend/templates/contact.html
+++ b/frontend/templates/contact.html
@@ -14,6 +14,7 @@
     <div id="toast" role="status"></div>
     <header id="header"></header>
     <div class="para_form">
+        <h1>Contactez-nous</h1>
         <p>Vous avez une question, une suggestion ou souhaitez simplement échanger avec nous ? 
             N’hésitez pas à nous écrire ! 
             Nous nous engageons à vous répondre dans les plus brefs délais et à vous apporter toute l’aide nécessaire. 
