Ajout img chatbot + changement format img poele

--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -29,3 +29,19 @@ button.active {
     transform: translateY(20px);
     font-size: 18px;
 }
+.robot {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 1;
+  background: none;
+  cursor: pointer;
+  border-style: none;
+}
+.robot > img:hover {
+  transform: scale(1.2);
+}
+.robot > img {
+  height: clamp(4rem, 8vw, 6rem);
+  transition: transform 0.3s ease;
+}
