--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/reset_modern_normalize.css">
+    <link rel="stylesheet" href="../assets/css/reset_modern_normalize.css">
+    <link rel="stylesheet" href="../assets/css/header.css">
     <link rel="icon" href="../assets/img/poele.ico" type="image/x-icon">
 </head>
 <body>
     <header class="header">
+        <span class="robot">
+            <img src="../assets/img/chatbot.webp" alt="Image d'un robot">
+        </span>
         <div class="logo_titre">
             <a href="../index.html">
                 <img src="../assets/img/poele.ico" alt="Logo Miam & Co" class="logo">
